fix: typescript generator bug fix in book catalog column
