# apps/backend/src/book/book.entity.ts
@@ -19,6 +19,7 @@ export const BookSchema = z
 		readingTime: z.number(),
 		chapters: z.number(),
 		rating: z.number(),
+		isPublic: z.boolean(),
 		genres: z.array(shortGenreSchema)
 	})
 	.merge(ShortBookSchema)
@@ -30,7 +31,6 @@ export const FullBookSchema = BookSchema.merge(
 			updatedAt: z.date(),
 			recommendable: z.boolean(),
 			ebook: z.string(),
-			isPublic: z.boolean(),
 			_count: z
 				.object({
 					finishedBy: z.number(),
